Create partial part

--- a/MyPeronalWebSite/MyPeronalWebSite.csproj
+++ b/MyPeronalWebSite/MyPeronalWebSite.csproj
@@ -1256,10 +1256,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PartialController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModel\IndexViewModel.cs" />
+    <Compile Include="Models\ViewModel\NavbarViewModel.cs" />
     <Compile Include="Models\ViewModel\ProjectDetailViewModel.cs" />
     <Compile Include="Models\VT\PersonelDB.Context.cs">
       <AutoGen>True</AutoGen>
@@ -1379,6 +1381,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ProjectDetail.cshtml" />
+    <Content Include="Views\Partial\NavbarPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
