new logic to current project

--- a/MyPeronalWebSite/Web.config
+++ b/MyPeronalWebSite/Web.config
@@ -50,6 +50,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PersonelWebDbEntities" connectionString="metadata=res://*/Models.VT.PersonelDB.csdl|res://*/Models.VT.PersonelDB.ssdl|res://*/Models.VT.PersonelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-798VB1N\MSSQLSERVERDEV;initial catalog=PersonelWebDb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PersonelWebDbEntities" connectionString="metadata=res://*/Models.VT.PersonelDB.csdl|res://*/Models.VT.PersonelDB.ssdl|res://*/Models.VT.PersonelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AYDEMIR\SQLEXPRESS01;initial catalog=PersonelWebDb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration> 
