An Error occurred while creating admin login's panel

--- a/MyPeronalWebSite/Areas/Admin/Views/web.config
+++ b/MyPeronalWebSite/Areas/Admin/Views/web.config
@@ -23,6 +23,15 @@
     </pages>
   </system.web.webPages.razor>
 
+	<!-- FORMS AUTHENTICATION -->
+	<authentication mode="Forms">
+		<forms loginUrl="/Admin/Account/Login" timeout="30"  />
+	</authentication>
+
+	<!-- AUTHORIZATION: Login olmamış kullanıcıları engelle -->
+	<authorization>
+		<deny users="?" />
+	</authorization>
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
