--- a/MyPeronalWebSite/Web.config
+++ b/MyPeronalWebSite/Web.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
+		<!-- Razor yapılandırma bildirimi -->
+		<sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+			<section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="false" />
+		</sectionGroup>
+
+		<!-- Entity Framework bildirimi -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 
@@ -15,8 +21,47 @@
 		<compilation debug="true" targetFramework="4.8.1" />
 		<httpRuntime targetFramework="4.8.1" />
 
+		 <!--Forms Authentication--> 
+		<authentication mode="Forms">
+			<forms loginUrl="~/Admin/Account/Login" timeout="30" />
+		</authentication>
 
+		 <!--Login olmayan kullanıcıları engelle--> 
+		<authorization>
+			<deny users="?" />
+		</authorization>
 	</system.web>
+
+	<!-- Login ve Logout sayfaları herkese açık -->
+	<location path="Admin/Account/Login">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+
+	<location path="Admin/Account/Logout">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+
+	<!-- Razor konfigürasyonu -->
+	<system.web.webPages.razor>
+		<pages pageBaseType="System.Web.Mvc.WebViewPage">
+			<namespaces>
+				<add namespace="System.Web.Mvc" />
+				<add namespace="System.Web.Mvc.Ajax" />
+				<add namespace="System.Web.Mvc.Html" />
+				<add namespace="System.Web.Optimization" />
+				<add namespace="System.Web.Routing" />
+				<add namespace="System.Web.Helpers" />
+			</namespaces>
+		</pages>
+	</system.web.webPages.razor>
 
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -40,13 +85,17 @@
 				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 
 	<system.codedom>
 		<compilers>
 			<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=&quot;Web&quot; /optionInfer+" />
 		</compilers>
 	</system.codedom>
 
@@ -57,8 +106,14 @@
 	</entityFramework>
 
 	<connectionStrings>
-		<add name="PersonelWebDbEntities"
-			 connectionString="metadata=res://*/Models.VT.PersonelDB.csdl|res://*/Models.VT.PersonelDB.ssdl|res://*/Models.VT.PersonelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-75QBK9H;initial catalog=PersonelWebDb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-			 providerName="System.Data.EntityClient" />
+		<add name="PersonelWebDbEntities" connectionString="metadata=res://*/Models.VT.PersonelDB.csdl|res://*/Models.VT.PersonelDB.ssdl|res://*/Models.VT.PersonelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-75QBK9H;initial catalog=PersonelWebDb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
+
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true" />
+		<handlers>
+			<remove name="BlockViewHandler" />
+			<add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+		</handlers>
+	</system.webServer>
 </configuration>
